--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,6 +1,8 @@
 /* color */
 $color-primary: #20AD96;
 $color-secondary: #3F3A64;
+$color-text: rgb(51, 51, 51);
+$color-lightgrey: rgb(105, 105, 105);
 
 /* measures */
 $height-header: 80px;
