--- a/src/style/flix.scss
+++ b/src/style/flix.scss
@@ -25,8 +25,16 @@
     overflow-y: auto;
 }
 
+.overflow-x-hidden{
+    overflow-x: hidden;
+}
+
 .position-fixed{
     position: fixed;
+}
+
+.position-relative{
+    position: relative;
 }
 
 .top-0{
