--- a/src/style/flix.scss
+++ b/src/style/flix.scss
@@ -147,6 +147,10 @@
     text-align: center;
 }
 
+.text-left {
+    text-align: left;
+}
+
 .justify-content-center{
     justify-content: center;
 }
