add section faq + video youtube

--- a/src/style/flix.scss
+++ b/src/style/flix.scss
@@ -121,11 +121,23 @@
 .margin-left-20{
     margin: 20px;
 }
+
+.margin-y-6{
+    margin: 6rem 0;
+}
+
+.margin-y-10{
+    margin: 10rem 0;
+}
 /*
 .nav-link:hover{
     color: white;
 }
 */
+
+.color-white{
+    color: #fff;
+}
 
 .d-none{
     display: none;
